k8s/sqlite-web.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sqlite-web
  namespace: okmusic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: okmusic.sanrabbit.com
      http:
        paths:
          - path: /sqlite-web
            backend:
              serviceName: sqlite-web
              servicePort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: sqlite-web
  namespace: okmusic
  labels:
    k8s-app: okmusic
spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    k8s-app: okmusic
  type: NodePort

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sqlite-web
  namespace: okmusic
  labels:
    k8s-app: okmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: okmusic
  template:
    metadata:
      name: sqlite-web
      labels:
        k8s-app: okmusic
    spec:
      volumes:
        - name: okmusic-data
          persistentVolumeClaim:
            claimName: okmusic
      containers:
        - name: sqlite-web
          image: coleifer/sqlite-web
          imagePullPolicy: IfNotPresent
          resources: 
            limits:
              #cpu: "500m"
              #memory: "300Mi"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: okmusic-data
              mountPath: /data
      restartPolicy: Always
